# kalosm

./: .gitignore  Cargo.toml  README.md
demos/rgliner-web/: Cargo.toml  Dioxus.toml
demos/rgliner-web/assets/: style.css
demos/rgliner-web/src/: main.rs
fusor-ml/conformance/: Cargo.toml
fusor-ml/conformance/src/: builder.rs  comparison.rs  fuzz.rs  lib.rs  tuple_macros.rs
fusor-ml/conformance/tests/: api_surface.rs  cache_ops.rs  construction_ops.rs  cpu_regressions.rs  dtypes.rs  elementwise_ops.rs  flash_attention_ops.rs  fusion_behavior.rs  fusion_correctness.rs  layer_ops.rs  layout_ops.rs  matmul_conv_pool.rs  normalization_ops.rs  quantized_matmul.rs  quantized_matmul_batched.rs  quantized_matmul_fusion.rs  quantized_matmul_paired.rs  rank_and_empty.rs  reductions_indexing.rs  rope_ops.rs  should_panic.rs  vision_block_pattern.rs
fusor-ml/core/: Cargo.toml  README.md
fusor-ml/core/.claude/: settings.local.json
fusor-ml/core/benches/: elementwise.rs  fused.rs  matmul.rs  pairwise.rs  qmatmul.rs  reduce.rs  softmax.rs
fusor-ml/core/examples/: bench_llama_qmat_bottleneck.rs  bench_llama_qmat_bottleneck_HANDOFF.md  bench_specialized_kernels.rs  bench_vision_matmul.rs  hello.rs  llama_decode_persistent_logits_HANDOFF.md  train_linear_regression.rs  wgpu_overhead_probe.rs
fusor-ml/core/src/: device.rs  element_wise.rs  flash_attention.rs  index_select.rs  kernel_selection.rs  lib.rs  map_layout.rs  nary_direct.rs  nary_wise.rs  pair_wise.rs  rank.rs  reduce.rs  reduce_direct.rs  resize.rs  rms_norm.rs  slice_assign.rs  softmax.rs  tensor.rs  tensor_expr.rs  tensor_ir_lowering.rs  tensor_ir_runtime.rs  top_k.rs  visit_tiled.rs
fusor-ml/core/src/mir/: mod.rs  (+6 more)
fusor-ml/core/tests/: deep_graph_repro.rs  nary_fusion.rs  no_raw_wgsl.rs
fusor-ml/cpu/: Cargo.toml
fusor-ml/cpu/benches/: comparison.rs  fusion.rs  qmatmul.rs  tensor_ops.rs
fusor-ml/cpu/src/: backing.rs  cast.rs  comparison.rs  conditional.rs  dynamic.rs  elementwise.rs  expr.rs  gather.rs  index.rs  lib.rs  matmul.rs  pairwise.rs  parallel.rs  quantized.rs  rank.rs  reduce.rs  scalar.rs  slice_assign.rs  tensor.rs
fusor-ml/cpu/tests/: creation.rs  index.rs  matmul.rs
fusor-ml/fusor/: Cargo.toml
fusor-ml/fusor/.claude/: settings.local.json
fusor-ml/fusor/benches/: attention_comparison.rs  bert_layer.rs  elementwise.rs  fused.rs  linear.rs  matmul.rs  pairwise.rs  reduce.rs  rope.rs  softmax.rs
fusor-ml/fusor/src/: autograd.rs  cpu.rs  device.rs  error.rs  fusion.rs  gpu.rs  lib.rs  quantized.rs
fusor-ml/fusor/tests/: api_surface.rs  deep_graph_repro.rs
fusor-ml/lavapipe-subgroups/: Cargo.toml
fusor-ml/lavapipe-subgroups/src/: main.rs
fusor-ml/tensor-ir/: Cargo.toml
fusor-ml/tensor-ir/examples/: candle_benchmarks.rs  egraph_visualize.rs  matmul.rs  phase_dump.rs  reduce.rs  runtime_beam_search.rs  runtime_benchmarks.rs  sgemv.rs
fusor-ml/tensor-ir/src/: lib.rs  pipeline.rs
fusor-ml/tile-ir/: Cargo.toml
fusor-ml/tile-ir-kernels/: Cargo.toml
fusor-ml/tile-ir-kernels/examples/: tile_ir.rs
fusor-ml/tile-ir-kernels/src/: dispatch.rs  grid.rs  kernels.rs  lib.rs  program_kernels.rs  program_qgemv.rs  types.rs
fusor-ml/tile-ir-kernels/tests/: correctness_fuzz.rs  lowering.rs
fusor-ml/tile-ir-runtime/: Cargo.toml
fusor-ml/tile-ir-runtime/src/: buffer_pool.rs  cache.rs  direct_kernel.rs  dispatch.rs  lib.rs
fusor-ml/tile-ir/examples/: bench_qmatmul.rs  bench_tile_softmax.rs  tile_ir.rs
fusor-ml/tile-ir/src/: dispatch.rs  ir.rs  kernel_builder.rs  kernels.rs  lib.rs  lower.rs  quantized.rs  tests.rs  tile.rs
fusor-ml/tile-ir/tests/: correctness_fuzz.rs
interfaces/kalosm/: Cargo.toml  README.md
interfaces/kalosm-chunking/: Cargo.toml
interfaces/kalosm-chunking/src/: lib.rs
interfaces/kalosm-common/: Cargo.toml
interfaces/kalosm-common/.claude/: settings.local.json
interfaces/kalosm-common/src/: cache.rs  lib.rs
interfaces/kalosm-language/: Cargo.toml
interfaces/kalosm-language/src/: lib.rs  vector_db.rs
interfaces/kalosm-vision/: Cargo.toml  README.md
interfaces/kalosm-vision/src/: lib.rs
interfaces/kalosm/docs/: vision.md
interfaces/kalosm/examples/: chat-boxed.rs  chat-constrained-boxed.rs  chat-constrained.rs  chat-mistral-2.rs  chat-tiny-llama.rs  chat-with-character.rs  chat.rs  chunking.rs  claude-3-5-haiku.rs  codestral.rs  constrained-regex.rs  constrained-rust-types.rs  constrained.rs  crawl.rs  custom_llama_source.rs  evaluation.rs  gemma-3.rs  generate-image.rs  generate-text.rs  gpt-4o-mini.rs  hybrid-search.rs  live-qa.rs  llama.rs  mistral.rs  mutate.rs  ocr.rs  phi-3.rs  phi-4.rs  prompt-annealing.rs  qwen.rs  rag.rs  remote-open-ai-compatable.rs  segment-image.rs  self-chat.rs  semantic-chunk.rs  semantic-search.rs  task-r1.rs  task.rs  transcribe.rs  vision.rs
interfaces/kalosm/src/: evaluate.rs  lib.rs  prompt_annealing.rs
interfaces/language-model/: Cargo.toml
interfaces/language-model/docs/: completion.md  embedding.md
interfaces/language-model/src/: lib.rs  provider_chat.rs
models/kalosm-llama/: Cargo.toml
models/kalosm-llama/.claude/: settings.local.json
models/kalosm-llama/examples/: bench.rs  decode_latency.rs  infer.rs  infer_chat.rs  perf_probe.rs  profile_forward.rs  structured.rs  token_probe.rs  vision.rs
models/kalosm-llama/src/: chat.rs  chat_template.rs  gguf_tokenizer.rs  language_model.rs  lib.rs  model.rs  sampler.rs  session.rs  source.rs  structured.rs  token_stream.rs  tokenizer.rs
models/kalosm-tokenizer/: Cargo.toml
models/kalosm-tokenizer/src/: lib.rs
models/rgliner/: Cargo.toml  convert_to_gguf.py
models/rgliner/examples/: basic.rs  debug_v2.rs  relex.rs
models/rgliner/scripts/: convert_relex_to_gguf.py  debug_compare.py
models/rgliner/src/: config.rs  decoding.rs  error.rs  lib.rs  relation_decoding.rs  relex.rs  relex_tokenization.rs  source.rs  tokenization.rs
models/rgliner/tests/: example_regression.rs
models/segment-anything-rs/: Cargo.toml
models/segment-anything-rs/examples/: segment-anything.rs  segment-everything.rs
prototypes/phase-token-prototype/: Cargo.toml
(+461 files in other folders)
