[package]
name = "rgliner-web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "=0.7.2", features = ["web"] }
rgliner = { path = "../../models/rgliner", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
