[package]
name = "fusor-core"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
# Use stable when https://github.com/gfx-rs/wgpu/issues/7712 is resolved
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["std", "naga-ir"] }
bytemuck = { version = "1.14", features = ["derive"] }
futures-channel = { workspace = true }
tabbycat = { version = "0.1.3", optional = true }
half = { version = "2.4.1", features = ["bytemuck"] }
fusor-gguf = { workspace = true }
fusor-types = { workspace = true }
rustc-hash = "2.1.1"
thiserror.workspace = true
parking_lot = "0.12.3"
tracing = "0.1.41"
lru = { version = "0.14.0", default-features = false }
pollster = "0.4.0"
petgraph = { version = "0.8.3", features = ["stable_graph", "std"], default-features = false }
fusor-tile-ir = { workspace = true }
fusor-tile-ir-kernels = { workspace = true }
fusor-tile-ir-runtime = { workspace = true }

# Bench-only deps; activated by the `bench` feature. Kept here (not in
# [dev-dependencies]) so plain `cargo test` doesn't have to compile candle,
# ndarray, criterion, tokio, etc.
criterion = { workspace = true, optional = true }
futures = { version = "0.3.31", optional = true }
ndarray = { version = "0.16.1", optional = true }
pretty_assertions = { version = "1.4.1", optional = true }
num-traits = { version = "0.2.19", optional = true }
tokio = { version = "1.43.0", features = ["rt", "fs", "macros"], optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
kalosm-common = { workspace = true, optional = true }
kalosm-model-types = { workspace = true, optional = true }

# Used by the hello example to fetch a GGUF model; gated by `example-net`
# so `cargo test` doesn't pull in the full hyper/TLS stack.
reqwest = { version = "0.12.15", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["metal"] }

[target.'cfg(windows)'.dependencies]
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["dx12"] }

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { workspace = true, optional = true, features = ["metal"] }
candle-nn = { workspace = true, optional = true, features = ["metal"] }
candle-transformers = { workspace = true, optional = true, features = ["metal"] }

[features]
default = []
extra_assertions = []
graphvis = ["dep:tabbycat"]
bench = [
    "dep:criterion",
    "dep:futures",
    "dep:ndarray",
    "dep:pretty_assertions",
    "dep:num-traits",
    "dep:tokio",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:kalosm-common",
    "dep:kalosm-model-types",
]
example-net = ["dep:reqwest"]

[dev-dependencies]
rand.workspace = true
tracing-subscriber = "0.3.19"

[[example]]
name = "hello"
required-features = ["example-net"]

[[bench]]
name = "matmul"
harness = false
required-features = ["bench"]

[[bench]]
name = "qmatmul"
harness = false
required-features = ["bench"]

[[bench]]
name = "elementwise"
harness = false
required-features = ["bench"]

[[bench]]
name = "pairwise"
harness = false
required-features = ["bench"]

[[bench]]
name = "fused"
harness = false
required-features = ["bench"]

[[bench]]
name = "reduce"
harness = false
required-features = ["bench"]

[[bench]]
name = "softmax"
harness = false
required-features = ["bench"]
