[package]
name = "fusor"
version = "0.1.0"
edition = "2024"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Unified CPU/GPU tensor abstraction over fusor-cpu and fusor-core"

[dependencies]
fusor-cpu = { path = "../cpu" }
fusor-core = { path = "../core", default-features = false }
fusor-gguf = { path = "../gguf" }
fusor-types = { path = "../types" }
pollster = { version = "0.4.0", optional = true }
paste = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
half = "2.4"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
half = "2.4"
criterion.workspace = true
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
kalosm-common = { workspace = true }
kalosm-model-types.workspace = true
rand.workspace = true
futures = "0.3.31"
fusor-core = { path = "../core" }
fusor-gguf = { path = "../gguf" }
ndarray = "0.16.1"

[lib]
bench = false

[features]
default = ["cpu", "gpu"]
cpu = []
gpu = ["dep:pollster"]
graphvis = ["gpu", "fusor-core/graphvis"]

[[bench]]
name = "bert_layer"
harness = false

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "rope"
harness = false

[[bench]]
name = "attention_comparison"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "qmatmul"
harness = false

[[bench]]
name = "elementwise"
harness = false

[[bench]]
name = "pairwise"
harness = false

[[bench]]
name = "fused"
harness = false

[[bench]]
name = "reduce"
harness = false

[[bench]]
name = "softmax"
harness = false
