[package]
name = "fusor-lavapipe-subgroups"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ash = "0.38"
bytemuck = { version = "1.14", features = ["derive"] }
fusor-tile-ir = { workspace = true }
fusor-tile-ir-kernels = { workspace = true }
naga = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", package = "naga", features = ["spv-out"] }
thiserror.workspace = true
