[package]
name = "tensor_ir"
version = "0.1.0"
edition = "2024"
publish = false

[features]
runtime = ["dep:tensor_ir_runtime_wgpu"]
candle = ["dep:candle-core"]

[dependencies]
egg = "0.10.0"
tracing = "0.1"
tensor_ir_frontend = { path = "crates/tensor_ir_frontend" }
tensor_ir_egraph = { path = "crates/tensor_ir_egraph" }
tensor_ir_opt = { path = "crates/tensor_ir_opt" }
tensor_ir_dispatch = { path = "crates/tensor_ir_dispatch" }
tensor_ir_codegen_naga = { path = "crates/tensor_ir_codegen_naga" }
tensor_ir_runtime_wgpu = { path = "crates/tensor_ir_runtime_wgpu", optional = true }
candle-core = { version = "0.9", features = ["metal"], optional = true }
naga = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", features = ["wgsl-out", "msl-out"] }

[dev-dependencies]
bytemuck = { version = "1", features = ["derive"] }
ordered-float = "5.0.0"
pollster = "0.4"
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", features = ["naga-ir"] }
