[package]
name = "fusor-tile-ir-runtime"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2024"
publish = false

[dependencies]
fusor-tile-ir = { workspace = true }
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["std", "naga-ir"] }
lru = { version = "0.14.0", default-features = false }
parking_lot = "0.12.3"
rustc-hash = "2.1.1"

[target.'cfg(target_vendor = "apple")'.dependencies]
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["metal"] }

[target.'cfg(windows)'.dependencies]
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["dx12"] }

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", default-features = false, features = ["vulkan"] }
