[package]
name = "kalosm-common"
version = "0.4.0"
edition = "2021"
description = "Helpers for kalosm downloads and candle utilities"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
dirs = "5.0.1"
tracing = "0.1.40"
httpdate = "1.0.3"
metal = { version = "0.29.0", optional = true }
thiserror.workspace = true
kalosm-model-types = { workspace = true, features = ["loading-progress-bar"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false }
ureq = { version = "3.2.0", default-features = false, features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.12.12", default-features = false, features = ["stream"] }
web-sys = { version = "0.3", features = [
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemCreateWritableOptions",
    "File",
    "Blob",
    "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
metal = ["dep:metal"]
candle = ["dep:candle-core", "dep:candle-nn"]
