[package]
name = "kalosm-common"
version = "0.4.0"
edition = "2021"
description = "Shared helpers for Kalosm downloads and caching"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
tracing = "0.1.40"
httpdate = "1.0.3"
thiserror.workspace = true
kalosm-model-types = { workspace = true, features = ["loading-progress-bar"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-channel = { workspace = true }
futures-util = { workspace = true }
ureq = { version = "3.2.0", default-features = false, features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = { workspace = true }
reqwest = { version = "0.12.12", default-features = false, features = ["stream"] }
web-sys = { version = "0.3", features = [
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemCreateWritableOptions",
    "File",
    "Blob",
    "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
